# CppProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
OptionParser/: CMakeLists.txt
OptionParser/src/: OptionParser.cpp
app/: CMakeLists.txt  app.cpp  graphics.cpp  main.cpp
app/include/: graphics.hpp
